--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "lodash": "*",
-    "gl-matrix": "~2.2.1"
+    "gl-matrix": "~2.2.1",
+    "requirejs": "~2.1.14"
   }
 }
