--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "lodash": "*",
     "gl-matrix": "~2.2.1",
-    "requirejs": "~2.1.14"
+    "requirejs": "~2.1.14",
+    "jquery": "~2.1.1"
   }
 }
