--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-    "name": "cheepgl",
-    "version": "0.0.1",
-    "homepage": "https://github.com/kanaihiroki/cheepgl",
+  "name": "cheepgl",
+  "version": "0.0.1",
+  "homepage": "https://github.com/kanaihiroki/cheepgl",
   "engines": {
     "node": ">= 0.10.0"
   },
   "devDependencies": {
-      "gulp": "^3.8.7",
+    "gulp": "^3.8.7",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
+    "gulp-requirejs": "^0.1.3",
     "gulp-sourcemaps": "^1.1.1",
     "main-bower-files": "^1.0.2"
   }
