* WebComponentsを使って画面部分を作った

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "lodash": "*",
     "gl-matrix": "~2.2.1",
     "requirejs": "~2.1.14",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "polymer": "Polymer/polymer#~0.4.0",
+    "paper-elements": "Polymer/paper-elements#~0.4.0"
   }
 }
