--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
+    "gulp-load-plugins": "^0.7.0",
+    "gulp-rename": "^1.2.0",
     "gulp-requirejs": "^0.1.3",
     "gulp-sourcemaps": "^1.1.1",
     "main-bower-files": "^1.0.2"
